    marks or between a mark and the current situation, and stores it into a 
    given file.
  - a TRUNCATE sql verb is now allowed on audit_only tables group even in 
    logging state. The execution of a truncate statement on a table is 
    recorded in the associated log table, the emaj_verb column being set to 
    'TRU'.
  - add a column into the emaj_mark table to maintain statistics about the 
    total number of log rows recorded between the mark and the following one.
    This is useful to speedup the retrieval of this data, for instance by the 
    phpPgAdmin plugin.
  - in groups creation, start or rollback functions, improve the detection of 
    foreign keys referencing tables outside the groups or tables referenced 
    by foreign keys from tables outside the groups: tables from audit_only 
    groups are now ignored because the potential problem detected with 
    foreign keys only concerns rollback operations.
  - minor improvement in messages produced by emaj.emaj_verify_all() function.

Bug fixes:
  - fix rollback function generation for cases when a table name includes an 
    antislash character.
  - fix emaj_snap_group for cases when any column from the pkey contains at 
    least one special character that obliged to quote the column name in 
    queries.

0.10.1
------
Enhancements:
  - enhance emaj_snap_group() function so that it can be used by emaj_adm 
    granted role. The use of the function is also recorded into the emaj_hist 
    table. The files are now created in CSV format.
  - create a new emaj_snap_log_group() function to snap all log tables 
    related to a group into a supplied directory. Only rows corresponding 
    to a mark interval are snapped. One CSV file is created for each table. 
    Sequences state at starting mark and ending mark are also stored into 
    2 specific files.
  - the emaj_verify_all() function also performs various checks on all tables 